fix calendar padding issue on mobile

--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -40,6 +40,8 @@
 	height: 100vh;
 	max-width: 100%;
 	width: 0px;
+
+	padding-bottom: 20px;
 	
 	position: fixed;
 	right: 0;
